<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Parse Starter Project</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="title_activity_other_actions">OtherActions</string>
    <string name="user_full_name">User First Last Name</string>
    <string name="login_label">Login</string>
    <string name="create_account_label">Create New Account</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="cancel_label">Cancel</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="message_label">Message:</string>
    <string name="send_message_button">Send</string>
    <string name="compose_label">Compose</string>
    <string name="logout_label">Logout</string>
    <string name="refreshOption">Refresh</string>
</resources>
